# deepwoken-helper

./: .gitignore  README.md  pyproject.toml  setup.iss
.github/: FUNDING.yml
assets/: races.json
deepwokenhelper/: data.py  ocr.py  version_check.py
deepwokenhelper/gui/: application.py  control_panel.py
