[project]
requires-python = ">=3.12"
dependencies = [
    "pyqt6~=6.9.1",
    "opencv-python~=4.12.0.88",
    "platformdirs~=4.3.8",
    "pywin32==311",
    "pynput~=1.8.1",
    "pytesseract~=0.3.13",
    "pytest~=8.4.1",
    "requests~=2.32.4",
    "imutils~=0.5.4",
    # "ultralytics[onnx]~=8.3.156",
    # "WMI~=1.5.1",
    "onnx==1.17.0",
    "onnxruntime==1.20.1",
    "thefuzz~=0.22.1",
    "windows-capture~=1.5.0",
    "qtwaitingspinner @ git+https://github.com/z3ntu/QtWaitingSpinner.git",
]
name = "DeepwokenHelper"
version = "2.0.0"
description = "Deepwoken Helper to help you choose your cards."
readme = "README.md"

[[project.authors]]
name = "lipey1"

[project.license]
text = "GPL-3.0-only"

[tool.setuptools]
packages = ["deepwokenhelper"]

[tool.ruff.lint]
ignore = ["F405", "F403"]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
